--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,10 @@ img {
 }
 
 /* конвертик для писем  */
-
+.flex-icon {
+  display: flex;
+  align-items: center;
+}
 .item-envelop {
   width: 16px;
   height: 12px;
@@ -151,7 +154,7 @@ img {
 }
 
 .header .item:not(:last-child) {
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 .header .link {
@@ -171,21 +174,24 @@ img {
 } */
 
 .site-nav .link:hover,
-.site-nav .link:focus,
-.header .link:hover,
-.header .link:focus {
+.site-nav .link:focus {
   color: var(--accent-color);
 }
+.header .link:hover {
+  color: var(--accent-color);
+}
+.header .link:focus {
+  outline-color: #000000;
+}
+
+/* main */
 
 .button.primary:hover,
-.button.primary:focus,
-.button.secondary:hover,
-.button.secondary:focus {
+.button.primary:focus {
   color: #ffffff;
   background-color: var(--accent-color);
 }
 
-/* main */
 .hero {
   padding-top: 200px;
   margin: 0 auto;
@@ -201,10 +207,6 @@ img {
 
   background-image: linear-gradient(to right, #2f303acc, #2f303acc),
     url(../images/hero.jpg);
-
-  /* background-color: rgba(47, 48, 58, 0.8);
-  background-image: url(../images/hero.jpg); */
-
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -261,7 +263,7 @@ img {
 
   padding: 6px 22px;
 
-  background-color: var(--white-color);
+  background-color: var(--primary-bg-color);
 }
 
 .button.list {
@@ -276,6 +278,13 @@ img {
 }
 .button-element:nth-child(5) {
   margin-right: 0;
+}
+.secondary:hover,
+.secondary:focus {
+  background: #c4c4c4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: #ffffff;
+  background-color: var(--accent-color);
 }
 /* features */
 
@@ -331,7 +340,7 @@ img {
   height: 120px;
   margin-bottom: 30px;
 
-  background: var(--white-color);
+  background: var(--primary-bg-color);
   border-radius: 4px;
 }
 .antenna {
@@ -358,7 +367,6 @@ img {
 .astronaut:hover,
 .shedule:hover {
   fill: var(--accent-color);
-  border: 1px solid var(--accent-color);
 }
 
 .features .title {
@@ -444,7 +452,7 @@ img {
 
 /*  our-team */
 .bg-team {
-  background-color: var(--white-color);
+  background-color: var(--primary-bg-color);
 }
 .our-team .title {
   margin-top: 30px;
@@ -494,13 +502,17 @@ img {
   display: flex;
   justify-content: space-between;
   padding: 0 32px;
-  /* justify-content: space-evenly; */
 }
 
 /* social-links */
+.flex {
+  display: flex;
+}
 
 .social-links {
-  display: block;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   height: 44px;
   width: 44px;
   border-radius: 50%;
@@ -509,40 +521,27 @@ img {
 .instagram {
   width: 20px;
   height: 20px;
-  margin: 12px 11px;
 }
 .twitter {
   width: 21px;
   height: 16.25px;
-  margin: 12px 12px;
 }
 .facebook {
   width: 19px;
   height: 20px;
-  margin: 12px 12px;
 }
 .linkedin {
   width: 20px;
   height: 20px;
-  margin: 12px;
 }
 .social-links:hover {
   fill: var(--white-color);
   background-color: var(--accent-color);
 }
-
-/* .social-links {
-  display: block;
-  height: 44px;
-  width: 44px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-image: url(../images/symbol-defs.svg#instagram);
-  background-size: 20px;
-  border-radius: 50%;
-  fill: #afb1b8;
-  border: 1px solid red;
-} */
+.social-links:focus {
+  outline-style: solid;
+  outline-color: #000000;
+}
 
 /*    clients     */
 
@@ -560,8 +559,12 @@ img {
 .clients-element:nth-child(6) {
   margin-right: 0;
 }
+.clients-link {
+  display: block;
+}
 
 .clients-icon {
+  display: block;
   width: 170px;
   height: 90px;
 
@@ -595,6 +598,11 @@ img {
   fill: var(--accent-color);
   border: 1px solid var(--accent-color);
   border-radius: 4px;
+  outline-color: #000000;
+}
+.clients-link:focus {
+  outline-style: solid;
+  outline-color: #000000;
 }
 
 /* footer */
@@ -672,7 +680,9 @@ img {
 }
 
 .social-footer-links {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   height: 44px;
   width: 44px;
   border-radius: 50%;
@@ -682,6 +692,12 @@ img {
 
 .social-footer-links:hover {
   background-color: var(--accent-color);
+}
+.social-footer-links {
+  border: 1px solid transparent;
+}
+.social-footer-links:focus {
+  outline-color: #000000;
 }
 
 /*  our-work */
@@ -727,6 +743,9 @@ img {
 .our-work-element:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
+.our-work-link {
+  display: block;
+}
 
 .border {
   border: 1px solid #eeeeee;
@@ -735,8 +754,10 @@ img {
 
   padding: 20px 0;
 }
-.our-work-element:hover {
+.our-work-link:hover,
+.our-work-link:focus {
   box-sizing: border-box;
+  outline-color: #000000;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
